# efficiency_of_reason

./: .gitignore  ENHANCED_RESEARCH_PLAN.md  IMPLEMENTATION_SUMMARY.md  PREREGISTRATION.md  README.md  RESEARCH_PLAN.md  RUNPOD_QUICKSTART.md  SETUP_GITHUB.md  TROUBLESHOOTING.md  cleanup_old_project.sh  diagnose_installation.py  fix_installation.sh  pyproject.toml  requirements.txt  setup.py  test_imports.py
scripts/: 00_preload_model.py  01.5_experiment_quality_correlation.py  01_experiment_sparsity_gap_enhanced.py  01_run_sparsity_gap.py  02_experiment_task_contrast.py  03_experiment_kanan_validation.py  04_experiment_model_generalization.py  check_system_limits.py  test_model_loading.py  try_manual_load.py
src/wor/: __init__.py
src/wor/core/: __init__.py  loader.py  loader_alternative.py
src/wor/data/: __init__.py  datasets.py  parser.py
src/wor/metrics/: __init__.py  activation_energy.py  sparsity.py  statistics.py
src/wor/visualization/: __init__.py  plots.py
